Add chapter 2 text

--- a/index.html
+++ b/index.html
@@ -432,6 +432,115 @@
             'While the level of taxes levied matters, the structure of each tax is equally important. Each tax type has pros and cons, and each can contribute to or detract from a state’s overall tax climate. Similarly, other budgetary issues, such as federal funding levels and unfunded liabilities, should also be kept in mind when evaluating a state’s revenue structure.']
         },
         {
+          url: 'illinois-taxes-at-a-glance',
+          name: 'Illinois Taxes at a Glance',
+          subtitle: '',
+          image: 'images/2-1.svg',
+          format: 'wide',
+          body: ['This page provides a brief, broad overview of tax rates, tax collections, and other basic structural features of the Illinois tax system. '],
+          callout: 'For all rankings on this page, 1 indicates the highest rank among the 50 states.',
+          source: ['Note: All collections listed on this page are combined state and local per capita collections for the 2012 fiscal year. Income, federal aid, and state debt are for 2013. Individual and corporate income tax rates are ranked according to the top rate if a state has a graduated-rate individual or corporate income tax. Since individual and corporate income tax rates decreased at the beginning of 2015, these changes are not yet reflected in the individual and corporate income tax collections data that is as of the 2012 fiscal year. Illinois corporations face two separate income taxes: a regular corporate income tax and a corporate income tax enacted to replace the personal property tax. We present the combined rate. “State debt” is defined as the total outstanding debt at the end of the fiscal year, as defined by the Census Bureau.',
+          'Source: Tax Foundation, Facts & Figures 2015: How Does Your State Compare?']
+        },
+        {
+          url: 'state-tax-collections-grown-faster-than-local-collections',
+          name: 'State Tax Collections Have Grown Faster than Local Collections',
+          subtitle: 'Illinois’ Combined State and Local Tax Collections (1961-2012, in 2012 Dollars) ',
+          image: 'images/2-2.svg',
+          format: 'wide',
+          body: ['Illinois’ inflation-adjusted total state and local tax collections have risen from approximately $17.4 billion in 1961 to $66.5 billion in 2012. Since 1961, state tax collections have grown from 39 percent of the combined total to 55 percent. Meanwhile, local tax collections have decreased from 61 percent of the total to 45 percent. '],
+          callout: '',
+          source: ['Note: Dollar amounts are inflation-adjusted based on the annual average Consumer Price Index for All Urban Consumers (CPI-U) with a 2012 base year. Because local data is unavailable for 2001 and 2003, those points were excluded here, and points surrounding these years are connected with dotted lines. Chart shows collections, not distributions.',
+          'Source: Census Bureau, State and Local Government Finances.']
+        },
+        {
+          url: 'compared-to-us-illinois-relies-more-on-property-tax-less-on-sales-tax',
+          name: 'Compared to the Entire U.S., Illinois Relies More on Property Taxes, Less on Sales Taxes',
+          subtitle: 'Percent of Total Combined State and Local Tax Collections by Tax Type, Illinois and U.S. (2012)',
+          image: 'images/2-3.svg',
+          format: 'square',
+          body: ['Illinois obtained the largest share of state and local combined collections in 2012 from property taxes (38 percent of total), followed by individual income taxes (23 percent) and general sales taxes (15 percent). The Illinois property tax share is higher than the U.S. average, and the sales tax share is lower. Corporate income taxes make up the smallest share of collections in both Illinois and the U.S. as a whole, although Illinois relies on them a slightly more than other states.'],
+          callout: '',
+          source: ['Note: Percentages may not add to 100 due to rounding.',
+          'Source: Census Bureau, State and Local Government Finances.']
+        },
+        {
+          url: 'corporate-income-taxes-illinois-most-volatile',
+          name: 'Corporate Income Taxes Are Illinois’ Most Volatile State Tax',
+          subtitle: 'Annual Percent Change in Illinois’ State Tax Collections by Tax Type (1978-2012)',
+          image: 'images/2-4.svg',
+          format: 'wide',
+          body: ['Revenue stability over the business cycle is an important facet of state tax policy. Different types of taxes react differently to changes in the economy. In Illinois, corporate income taxes fluctuate the most, followed by individual income and sales taxes.'],
+          callout: '',
+          source: ['Source: Census Bureau, State and Local Government Finances.']
+        },
+        {
+          url: 'illinois-relies-heavily-on-federal-aid',
+          name: 'Illinois, like All States, Relies Heavily on Federal Aid',
+          subtitle: 'Federal Funding as a Percent of State Government General Revenues (FY 2013)',
+          image: 'images/2-5.svg',
+          format: 'wide',
+          body: ['While state and local taxes are a large component of state revenue toolkits, federal transfers are also surprisingly sizeable. Illinois relied on federal funding for 25.9 percent of general revenues in 2013, compared to the national average of 30.0 percent. Federal funding in the states supports a variety of programs, including those related to public welfare, health, education, and transportation.'],
+          callout: '',
+          source: ['Note: Figures are calculated by dividing the amount of each state’s “intergovernmental revenues” from the federal level to the state level by the state’s “general revenue,” as estimated by the Census Bureau. General revenue includes all taxes but excludes utility, liquor store, and insurance trust revenue. DC is not included because it is designated as a local jurisdiction.',
+          'Source: Census Bureau, State and Local Government Finances.']
+        },
+        {
+          url: 'illinois-business-tax-middle-of-the-pack',
+          name: 'Illinois’ Business Tax Climate Is Middle-of-the-Pack',
+          subtitle: 'Illinois Ranks 31st out of 50 in the State Business Tax Climate Index (2015)',
+          image: 'images/2-6.svg',
+          format: 'wide',
+          body: ['The State Business Tax Climate Index gauges how well-structured each state’s tax code is for business. States that score well on the Index have broad bases and low rates, but Illinois has narrow bases and high rates on many taxes. Illinois is ranked 31st in the country.'],
+          callout: '',
+          source: ['Note: A rank of 1 indicates the state’s tax system is more favorable for business; a rank of 50 indicates the state’s tax system is less favorable for business. Snapshot date is July 1, 2014. DC’s rank does not affect other states’ rankings, but the figure in parentheses indicates where it would rank if included.',
+          'Source: Tax Foundation, 2015 State Business Tax Climate Index.']
+        },
+        {
+          url: 'illinois-business-tax-climate-falls-behind-neighbors',
+          name: 'Illinois’ Business Tax Climate Falls behind Most Neighboring States',
+          subtitle: 'State Business Tax Climate Index Rankings for Illinois and Neighboring States (2015)',
+          image: 'images/2-7.svg',
+          format: 'wide',
+          body: ['Breaking the State Business Tax Climate Index into its subcomponents allows us to compare the structure of each major tax type. Nearly all neighboring states have better corporate tax codes than Illinois. However, many Illinois businesses file income taxes through the individual income tax code, where Illinois scores relatively well compared to most of its neighbors. Illinois scores poorly in terms of sales tax, unemployment insurance tax, and property tax.'],
+          callout: '',
+          source: ['Note: A rank of 1 indicates the state’s tax system is more favorable for business; a rank of 50 indicates the state’s tax system is less favorable for business. Snapshot date is July 1, 2014. Component rankings do not average to the overall rank. States without a given tax rank equally as number 1 in that component.',
+          'Source: Tax Foundation, 2015 State Business Tax Climate Index.']
+        },
+        {
+          url: 'illinois-tax-burden-ranks-higher-than-most',
+          name: 'Illinois’ Tax Burden Ranks Higher than Most Other States’ Burdens',
+          subtitle: 'Total State-Local Tax Burden as a Percent of State Residents’ Income, Illinois and Neighboring States (FY 2011)',
+          image: 'images/2-8.svg',
+          format: 'square',
+          body: ['Illinois’ total state-local tax burden is ranked 13th highest in the country and above most of its neighbors. The average Illinois taxpayer paid $4,658 in state and local taxes in 2011, amounting to 10.2 percent of state residents’ total income. Illinoisans pay approximately 74 percent of their total tax burden to state and local governments in Illinois and pay the remaining share to out-of-state jurisdictions.'],
+          callout: 'Illinois taxpayers pay state and local taxes not only to Illinois but also to other state and local governments due to tax shifting across state lines. For example, sales and excise taxes are paid by nonresident tourists when they travel to other states and spend money on lodging and food.',
+          source: ['Note: Total state-local tax burden includes all taxes levied by state and local governments. For a full list of taxes included, see Tax Foundation Working Paper No. 10.',
+          'Source: Tax Foundation, Annual State-Local Tax Burden Ranking (FY 2011).']
+        },
+        {
+          url: 'illinois-tax-burden-higher-than-us-average',
+          name: 'Illinois’ Tax Burden Is Now Higher than the U.S. Average',
+          subtitle: 'Total State-Local Tax Burden as a Percent of State Income, Illinois and U.S. Average (FY 2011)',
+          image: 'images/2-9.svg',
+          format: 'wide',
+          body: ['Since 1977, state and local tax burdens in Illinois have fluctuated around the U.S. national average. In the late 1970s through the late 1980s, tax burdens in Illinois were higher than average. That trend flipped in the early 1990s through the early 2000s. Since 2008, Illinois’ tax burdens have exceeded that of the U.S. '],
+          callout: 'Three things can change a state’s tax burden as a share of income: changes in taxes paid to other states, changes in taxes paid to the home state, and changes in state income.',
+          source: ['Note: For a full list of definitional terms and methodology, see Tax Foundation Working Paper No. 10.',
+          'Source: Tax Foundation, Annual State-Local Tax Burden Ranking (FY 2011).']
+        },
+        {
+          url: 'illinois-had-most-underfuned-pensions-in-us',
+          name: 'Illinois Has the Most Under-Funded Public Pensions in the Country',
+          subtitle: 'Funded Portion of State-Sponsored Pension Plans (2012)',
+          image: 'images/2-10.svg',
+          format: 'wide',
+          body: ['Public pensions, or the retirement benefits promised to public employees, are an important state budgetary consideration. The degree to which a state meets these obligations offers a glimpse of that state’s financial soundness. This measure is referred to as a “funded ratio” because it estimates the amount of pension obligations that a state can pay at this time. As of 2012, Illinois could only pay for 40.4 percent of existing public pension liabilities—the least in the nation. '],
+          callout: '',
+          source: ['Note: “Funded Ratio” is defined as actuarial value of assets divided by actuarial accrued liabilities.',
+          'Source: Standard & Poor’s Ratings Services, U.S. State Pension Funding: Strong Investment Returns Could Lift Funded Ratios, But Longer-Term Challenges Remain, Table 3A (June 2014).']
+        },
+        {
           url: 'Chapter-3',
           name: 'Chapter 3',
           subtitle: 'Individual Income Tax in Illinois',
