--- a/index.html
+++ b/index.html
@@ -553,6 +553,59 @@
             'The 2011 rate increase had one striking result: Illinois’ individual income tax collections per person in 2012 were higher than the all-state average. This was a recent change, however. Prior to 2011 and at least as far back as the late 1970s, Illinois’ collections per person had always been below the U.S. average.']
         },
         {
+          url: 'illinois-individual-income-tax-fluctuated-over-time',
+          name: 'Illinois’ Individual Income Tax Rate Has Fluctuated over Time',
+          subtitle: 'Individual Income Tax Rate, Illinois (1969-2015)',
+          image: 'images/3-1.svg',
+          format: 'wide',
+          body: ['The Illinois individual income tax has a history of temporary increases, one of which was made permanent. The tax was originally created in 1969 with a rate of 2.5 percent levied on all incomes. After brief fluctuation in the 1980s, the rate increased to 3 percent in the early 1990s. The rate remained constant for two decades before a temporary rate increase was enacted in 2011. Rates dropped to 3.75 percent at the start of 2015 and are scheduled to drop further to 3.25 percent in 2025. '],
+          callout: '',
+          source: ['Source: Illinois Department of Revenue, Tax Rate Database; Illinois Economic and Fiscal Commission, Illinois Individual Income Tax (May 2002); Illinois General Assembly, Illinois Compiled Statutes.']
+        },
+        {
+          url: 'illinois-individual-income-tax-collections-per-person-over-time',
+          name: 'Illinois’ Individual Income Tax Collections per Person over Time',
+          subtitle: 'Total State and Local Individual Income Tax Collections per Capita, Illinois and U.S. (1977-2012, in 2012 Dollars)',
+          image: 'images/3-2.svg',
+          format: 'wide',
+          body: ['Prior to 2012, inflation-adjusted individual income tax collections per person in Illinois were lower than state and local collections in the country on average. In 2012, however, this trend flipped due to a substantial increase in Illinois’ individual income tax rate. '],
+          callout: '',
+          source: ['Note: Dollar amounts are inflation-adjusted based on the annual average Consumer Price Index for All Urban Consumers (CPI-U) with a 2012 base year. Because local data is unavailable for 2001 and 2003, those points were excluded here, and points surrounding these years are connected with dotted lines.',
+          'Source: Census Bureau, State and Local Government Finances; Census Bureau, American Community Survey; Bureau of Labor Statistics, Consumer Price Indexes. ']
+        },
+        {
+          url: 'illinois-tax-bill',
+          name: 'How Does the Illinois Individual Income Tax Impact Real People?',
+          subtitle: 'Illinois Tax Bill',
+          image: 'images/3-3.svg',
+          format: 'wide',
+          body: ['The way a state chooses to structure its income tax matters for real people. These six scenarios show how low- or high-income Illinois taxpayers with or without children fare under the code in Illinois and its six neighboring states. '],
+          callout: '',
+          source: ['Note: All calculations are made for the 2015 tax year and reflect state statutes and tax rates as of January, 1, 2015. This assumes an equal split of income between spouses, all income was earned in the state of filing, no estimated tax payments were made in advance, and there were no interest or penalties charged. This does not include Illinois’ property tax credit.',
+          'Source: State statutes and forms; Tax Foundation calculations. ']
+        },
+        {
+          url: 'illinois-taxes-compared-to-neighbors',
+          name: 'How Does the Illinois Individual Income Tax Impact Real People?',
+          subtitle: 'Tax Bills in Other Select States in the Region',
+          image: 'images/3-4.svg',
+          format: 'wide',
+          body: ['The way a state chooses to structure its income tax matters for real people. These six scenarios show how low- or high-income Illinois taxpayers with or without children fare under the code in Illinois and its six neighboring states. '],
+          callout: 'If these same Illinoisans lived in one of the states below, these would be their income tax bills. ',
+          source: ['Note: All calculations are made for the 2015 tax year and reflect state statutes and tax rates as of January, 1, 2015. This assumes an equal split of income between spouses, all income was earned in the state of filing, no estimated tax payments were made in advance, and there were no interest or penalties charged. This does not include Illinois’ property tax credit or local income taxes, which are levied in some states and can be substantial (Indiana, Iowa, Kentucky, Michigan, and Missouri have local income taxes).',
+          'Source: State statutes and forms; Tax Foundation calculations.']
+        },
+        {
+          url: 'illinois-spent-4.35-billion-individual-income-tax-expenditures-2013',
+          name: 'Illinois Spent $4.35 Billion on Individual Income Tax Expenditures in 2013',
+          subtitle: 'Individual Income Tax Expenditures, by Amount and Percent of Total (FY 2013)',
+          image: 'images/3-5.svg',
+          format: 'square',
+          body: ['A tax expenditure is an activity that has been specifically exempted from taxation via a subtraction, exclusion, deduction, credit, or some other means. Individual income tax expenditures in Illinois totaled approximately $4.35 billion in 2013. The largest expenditure (amounting to over half of the total) was the subtraction for retirement income, followed by the standard exemption (25 percent of the total) and the credit for residential property taxes paid (13 percent). '],
+          callout: '',
+          source: ['Source: State of Illinois Comptroller, Tax Expenditure Report (Fiscal Year 2013).']
+        },
+        {
           url: 'Chapter-4',
           name: 'Chapter 4',
           subtitle: 'Business Taxes in Illinois',
